--- a/products.html
+++ b/products.html
@@ -34,6 +34,7 @@
 <body>
   
   <!-- HEADER -->
+
   <header class="header">
     <a class="logoText" href="index.html">
       <p>Inventory <img class="logoPic" src="img/logo.png" /> Management</p>
@@ -41,10 +42,14 @@
 
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a class="main-nav-link" href="products.html">Product List</a></li>
+        <li><a class="main-nav-link" href="Product_list.html">Product List</a></li>
       </ul>
-    </nav>
+      <ul class="main-nav-list">
+        <li><a class="main-nav-link"  id="upload-csv" href="product_upload.html">Upload Products</a></li>
+      </ul>
 
+    </nav>
+a
     <button class="btn-mobile-nav">
       <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
       <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
