Today's work on date 20/02/2024

--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
 
     <div class="header-sectionqw">
       <!-- <img src="img/longMango.jpg" alt="Mango Image"> -->
-      <p>All Products</p>
+      <p>Invoice Generated</p>
     </div>
     <section class="section-meals" id="meals">
       <div class="container invoiceTable ">
